# skidstice

./: CMakeLists.txt  GenerateBuildInfo.cmake  README.md
.github/workflows/: build-sdkdumper.yml  cmake-single-platform.yml
SDKDumperProject/: CMakeLists.txt  README.md
SDKDumperProject/include/: SDKDumper.hpp
SDKDumperProject/src/: SDKDumper.cpp
include/ImGui/: CMakeLists.txt  ImTween.h  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_offset_rect.h  imgui_tables.cpp  imgui_toggle.cpp  imgui_toggle.h  imgui_toggle_math.h  imgui_toggle_palette.cpp  imgui_toggle_palette.h  imgui_toggle_renderer.h  imgui_widgets.cpp  imstb_truetype.h
include/Kiero/: .gitmodules  CMakeLists.txt
include/Kiero/include/: kiero.hpp
include/Kiero/src/: kiero.cpp  kiero_d3dcommon.hpp  kiero_impl_d3d10.hpp  kiero_impl_d3d11.hpp  kiero_impl_d3d12.hpp  kiero_impl_d3d9.hpp  kiero_impl_opengl.hpp  kiero_impl_vulkan.hpp
include/Luau/: CMakeLists.txt
include/entt/config/: config.h
include/entt/container/: dense_map.hpp
include/entt/entity/: registry.hpp  sparse_set.hpp  storage.hpp
include/libhat/: CMakeLists.txt
include/minhook/: CMakeLists.txt
include/minhook/include/: MinHook.h
include/minhook/src/: hook.cpp
include/nes/include/nes/: event_dispatcher.hpp
resources/: skinblinker.txt
src/: Solstice.cpp  Solstice.hpp  dllmain.cpp  pch.hpp
src/Features/: FeatureManager.cpp  FeatureManager.hpp  SafeEventDispatcher.hpp
src/Features/Auth/: Authorization.cpp  Authorization.hpp  CustomCryptor.hpp
src/Features/Command/: Command.cpp  Command.hpp  CommandManager.cpp  CommandManager.hpp
src/Features/Command/Commands/: BindCommand.cpp  BindCommand.hpp  BuildInfoCommand.cpp  BuildInfoCommand.hpp  ConfigCommand.cpp  ConfigCommand.hpp  CopyNameCommand.cpp  CopyNameCommand.hpp  FlingCommand.cpp  FlingCommand.hpp  FriendCommand.cpp  FriendCommand.hpp  GamemodeCommand.cpp  GamemodeCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  HiveStatsCommand.cpp  HiveStatsCommand.hpp  IrcCommand.cpp  IrcCommand.hpp  LuaCommand.cpp  LuaCommand.hpp  ModuleCommand.cpp  ModuleCommand.hpp  NameProtectCommand.cpp  NameProtectCommand.hpp  QueueCommand.cpp  QueueCommand.hpp  SetCommand.cpp  SetCommand.hpp  SnipeCommand.cpp  SnipeCommand.hpp  TeleportCommand.cpp  TeleportCommand.hpp  TestCommand.cpp  TestCommand.hpp  ToggleCommand.cpp  ToggleCommand.hpp  UnbindCommand.cpp  UnbindCommand.hpp  (+2 more)
src/Features/Configs/: ConfigManager.cpp  ConfigManager.hpp  PreferenceManager.cpp  PreferenceManager.hpp
src/Features/Events/: ActorRenderEvent.hpp  BaseTickEvent.hpp  BlockChangedEvent.hpp  BobHurtEvent.hpp  BoneRenderEvent.hpp  ChatEvent.hpp  ClientTickEvent.hpp  ConnectionRequestEvent.hpp  ContainerScreenTickEvent.hpp  DrawImageEvent.hpp  Event.hpp  FovEvent.hpp  ItemRendererEvent.hpp  KeyEvent.hpp  LookInputEvent.hpp  ModuleStateChangeEvent.hpp  MouseEvent.hpp  NametagRenderEvent.hpp  NotifyEvent.hpp  PacketInEvent.hpp  PacketOutEvent.hpp  PingUpdateEvent.hpp  PreGameCheckEvent.hpp  RenderEvent.hpp  RenderItemInHandDescriptionEvent.hpp  RunUpdateCycleEvent.hpp  SendImmediateEvent.hpp  SwingDurationEvent.hpp  ThirdPersonEvent.hpp  WindowResizeEvent.hpp
src/Features/GUI/: ModernDropdown.cpp  ModernDropdown.hpp  ScriptingGui.cpp  ScriptingGui.hpp
src/Features/IRC/: IrcClient.cpp  IrcClient.hpp  WorkingVM.hpp
src/Features/Modules/: Module.cpp  Module.hpp  ModuleCategory.hpp  ModuleManager.cpp  ModuleManager.hpp  Setting.cpp  Setting.hpp
src/Features/Modules/Combat/: Aura.cpp  Aura.hpp  AutoClicker.cpp  AutoClicker.hpp  Criticals.cpp  Criticals.hpp  HitBoxes.cpp  HitBoxes.hpp  InfiniteAura.cpp  InfiniteAura.hpp  Reach.cpp  Reach.hpp  TriggerBot.cpp  TriggerBot.hpp
src/Features/Modules/Misc/: AntiBot.cpp  AntiBot.hpp  AntiCheatDetector.cpp  AntiCheatDetector.hpp  Anticheat.cpp  Anticheat.hpp  AutoAccept.cpp  AutoAccept.hpp  AutoCosmetic.cpp  AutoCosmetic.hpp  AutoDodge.cpp  AutoDodge.hpp  AutoLootbox.cpp  AutoLootbox.hpp  AutoMessage.cpp  AutoMessage.hpp  AutoQueue.cpp  AutoQueue.hpp  (+48 more)
src/Features/Scripting/: ScriptManager.cpp  ScriptManager.hpp  SolsticeScript.cpp  SolsticeScript.hpp
src/Hook/: Detour.cpp  Detour.hpp  Hook.cpp  Hook.hpp  HookManager.cpp  HookManager.hpp
src/SDK/: OffsetProvider.cpp  OffsetProvider.hpp  SigManager.cpp  SigManager.hpp
src/SDK/Minecraft/: ClientInstance.cpp  ClientInstance.hpp  GameSession.cpp  GameSession.hpp  JSON.cpp  JSON.hpp  KeyboardMouseSettings.cpp  KeyboardMouseSettings.hpp  MinecraftGame.cpp  MinecraftGame.hpp  MinecraftSim.cpp  MinecraftSim.hpp  Options.cpp  Options.hpp  UIProfanityContext.cpp  UIProfanityContext.hpp  mce.cpp  mce.hpp
src/Utils/: AudioUtils.cpp  AudioUtils.hpp  Buffer.hpp  ChatGPT.cpp  ChatGPT.hpp  FileUtils.cpp  FileUtils.hpp  FontHelper.cpp  FontHelper.hpp  HashedString.hpp  Keyboard.cpp  Keyboard.hpp  Logger.cpp  Logger.hpp  MemUtils.cpp  MemUtils.hpp  MessageTemplate.cpp  MessageTemplate.hpp  OAuthUtils.cpp  OAuthUtils.hpp  ProcUtils.cpp  ProcUtils.hpp  Resource.cpp  Resource.hpp  Resources.cpp  Resources.hpp  StringUtils.cpp  StringUtils.hpp  Structs.hpp  Utils.hpp
src/Utils/GameUtils/: ActorUtils.cpp  ActorUtils.hpp  ChatUtils.cpp  ChatUtils.hpp  ItemUtils.cpp  ItemUtils.hpp  PacketUtils.cpp  PacketUtils.hpp
src/Utils/MiscUtils/: Audio.cpp  Audio.hpp  BlockUtils.cpp  BlockUtils.hpp  ColorUtils.cpp  ColorUtils.hpp  CommandUtils.cpp  CommandUtils.hpp  D2D.cpp  D2D.hpp  DataStore.cpp  DataStore.hpp  EasingUtil.hpp  ImRenderUtils.cpp  ImRenderUtils.hpp  MathUtils.cpp  MathUtils.hpp  NotifyUtils.cpp  NotifyUtils.hpp  RenderUtils.cpp  RenderUtils.hpp  SoundUtils.cpp  SoundUtils.hpp
src/Utils/Shaders/: BlockInstanceVS.hlsl  DefaultPS.hlsl
src/Utils/SysUtils/: Base64.cpp  Base64.hpp  ExceptionHandler.cpp  ExceptionHandler.hpp  HWUtils.cpp  HWUtils.hpp  HttpRequest.cpp  HttpRequest.hpp  RegUtils.cpp  RegUtils.hpp  SHA256.cpp  SHA256.hpp  StackWalker.cpp  StackWalker.hpp  xorstr.hpp
(+378 files in other folders)
